add mayor in first alpha so it bumps to 2.0.0-alpha.1 instead of 1.0.1-alpha.1

--- a/.github/workflows/generate-alpha-tag.yaml
+++ b/.github/workflows/generate-alpha-tag.yaml
@@ -50,7 +50,7 @@ jobs:
           java-version: '15'
 
       - name: Generate Tag
-        run: ./gradlew --full-stacktrace createSemverTag "-Psemver.stage=alpha"
+        run: ./gradlew --full-stacktrace createSemverTag "-Psemver.stage=alpha" "-Psemver.scope=major"
 
       - name: Push
         run: git push --follow-tags
