--- a/gradle/projects.libs.versions.toml
+++ b/gradle/projects.libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 arrow = "1.0.1"
-arrowMeta = "1.6.1-SNAPSHOT"
+arrowMeta = "1.6.1-alpha.2"
 arrowGradleConfig = "0.10.0"
 assertj = "3.22.0"
 classgraph = "4.8.141"
