rm dependencys, further clean up and in gradle properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,14 @@
 # Package definitions
 projects.group=io.arrow-kt
-projects.version=1.6.1-SNAPSHOT
-projects.proofs_version=2.0-SNAPSHOT
-pom.description=Arrow Meta
-pom.url=https://github.com/arrow-kt/arrow-meta/
+pom.description=Arrow Proofs
+pom.url=https://github.com/arrow-kt/arrow-proofs/
 pom.license.name=The Apache Software License, Version 2.0
 pom.license.url=https://www.apache.org/licenses/LICENSE-2.0.txt
 pom.developer.id=arrow-kt
 pom.developer.name=The Arrow Authors
-pom.smc.url=https://github.com/arrow-kt/arrow-meta/
-pom.smc.connection=scm:git:git://github.com/arrow-kt/arrow-meta.git
-pom.smc.developerConnection=scm:git:ssh://git@github.com/arrow-kt/arrow-meta.git
+pom.smc.url=https://github.com/arrow-kt/arrow-proofs/
+pom.smc.connection=scm:git:git://github.com/arrow-kt/arrow-proofs.git
+pom.smc.developerConnection=scm:git:ssh://git@github.com/arrow-kt/arrow-proofs.git
 
 jvmTargetVersion=1.8
 
