Apply Arrow Gradle Config plugins and set visibility in all projects

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,19 @@
-########################################################################################################################
-###                                                      Gradle                                                      ###
-########################################################################################################################
+projects.group=io.arrow-kt
+####################################################################################################
+pom.name=Arrow Inject
+pom.description=Arrow Inject
+pom.url=https://github.com/arrow-kt/arrow-inject
+pom.license.name=The Apache License, Version 2.0
+pom.license.url=https://www.apache.org/licenses/LICENSE-2.0.txt
+pom.developer.id=arrow-kt
+pom.developer.name=The Arrow Authors
+pom.smc.url=https://github.com/arrow-kt/arrow-inject
+pom.smc.connection=scm:git:git@github.com:arrow-kt/arrow-inject.git
+pom.smc.developerConnection=scm:git:git@github.com:arrow-kt/arrow-inject.git
+####################################################################################################
 kotlin.code.style=official
 org.gradle.caching=true
-org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx4G
+#org.gradle.configureondemand=true
+#org.gradle.jvmargs=-Xmx4096m
 org.gradle.parallel=true
-#org.gradle.unsafe.configuration-cache=true
-#org.gradle.unsafe.configuration-cache-problems=warn
-#org.gradle.unsafe.configuration-cache.max-problems=100
 signing.gnupg.executable=gpg
