--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 arrowGradleConfig = "0.10.2"
 classgraph = "4.8.146"
-kotlin = "1.7.20-dev-1435"
+kotlin = "1.7.255-SNAPSHOT"
 reflections = "0.10.2"
 
 [libraries]
